force-app/main/default/objects/Lookup_Table__c/Lookup_Table__c.object-meta.xml
<CustomObject>
    <label>Lookup Table</label>
    <nameField>
        <displayFormat>LT-{00000}</displayFormat>
        <label>Lookup</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookup Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>