force-app/main/default/objects/Lookup_Table__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <externalId>true</externalId>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>