force-app/main/default/objects/Lookup_Table__c/fields/Table_Type__c.field-meta.xml
<CustomField>
    <fullName>Table_Type__c</fullName>
    <label>Table Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>dateTime</fullName>
            </value>
            <value>
                <fullName>IndustryC</fullName>
            </value>
            <value>
                <fullName>OwnerId</fullName>
            </value>
            <value>
                <fullName>PaymentTerms</fullName>
            </value>
            <value>
                <fullName>RecordTypeId</fullName>
            </value>
            <value>
                <fullName>UsaStates</fullName>
            </value>
            <value>
                <fullName>PBook</fullName>
            </value>
            <value>
                <fullName>OwnerId_CA</fullName>
            </value>
            <value>
                <fullName>OwnerId_US</fullName>
            </value>
            <value>
                <fullName>OwnerId_ES</fullName>
            </value>
            <value>
                <fullName>OwnerId_FR</fullName>
            </value>
            <value>
                <fullName>OwnerId_IT</fullName>
            </value>
            <value>
                <fullName>OwnerId_PL</fullName>
            </value>
            <value>
                <fullName>OwnerId_UK</fullName>
            </value>
            <value>
                <fullName>OwnerId_AU</fullName>
            </value>
            <value>
                <fullName>OwnerId_HK</fullName>
            </value>
            <value>
                <fullName>OwnerId_SH</fullName>
            </value>
            <value>
                <fullName>OwnerId_BR</fullName>
            </value>
            <value>
                <fullName>GroupCodes</fullName>
            </value>
            <value>
                <fullName>OwnerId_APAC</fullName>
                <isActive>false</isActive>
                <label>OwnerId_APAC</label>
            </value>
            <value>
                <fullName>OwnerId_EMEA</fullName>
                <isActive>false</isActive>
                <label>OwnerId_EMEA</label>
            </value>
            <value>
                <fullName>OwnerId_NACA</fullName>
                <isActive>false</isActive>
                <label>OwnerId_NACA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>