force-app/main/default/objects/Lookup_Table__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <externalId>true</externalId>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>