force-app/main/default/objects/Lookup_Table__c/listViews/dateTime.listView-meta.xml
<ListView>
    <fullName>dateTime</fullName>
    <columns>NAME</columns>
    <columns>Table_Type__c</columns>
    <columns>Key__c</columns>
    <columns>Value__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Table_Type__c</field>
        <operation>equals</operation>
        <value>dateTime</value>
    </filters>
    <label>dateTime</label>
</ListView>